[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/resources/fonts/montserrat_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/main/menus/menu_button.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://src/resources/fonts/montserrat.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = SubResource( 1 )

[node name="MenuButton" type="Button"]
margin_right = 500.0
margin_bottom = 60.0
rect_min_size = Vector2( 500, 60 )
custom_fonts/font = ExtResource( 1 )
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonText" type="Label" parent="."]
margin_left = 30.0
margin_top = 2.0
margin_right = 168.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Label"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 6.0
margin_top = 25.0
margin_right = 26.0
margin_bottom = 45.0
color = Color( 1, 0.592157, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="." to="." method="_on_generic_button_pressed"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
